Added new project image

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
               </p>
             </div>
 
-            <a href="#" class="btn btn-secondary">See All Projects</a>
+            <a href="https://online.fliphtml5.com/ebnpm/yfcq/" class="btn btn-secondary">See All Projects</a>
 
           </div>
 
@@ -480,16 +480,17 @@
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class=" card-tag" style="color: #7cb798">Web Design</p>
+                  <p class=" card-tag" style="color: #7cb798">Android App</p>
 
-                  <h3 class="h3 card-title">Missio Theme</h3>
+                  <h3 class="h3 card-title">Weekli</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere porta consectetur cursus porta lobortis. Scelerisque
-                    id ligula felis.
+                    This was designed to create insight about the organizational psychosocial health and used an 
+                    intelligent algorithm to analyze the previous information. Also, providing 
+                    suggestions to individual to reduce the stress level.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #7cb798">
+                  <a href="https://play.google.com/store/apps/details?id=se.com.weekli" class="btn-text" style="color: #7cb798">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -510,16 +511,17 @@
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class=" card-tag" style="color: #d16b86">Mobile Design</p>
+                  <p class=" card-tag" style="color: #d16b86">Android App</p>
 
-                  <h3 class="h3 card-title">Storage App</h3>
+                  <h3 class="h3 card-title">SafTrac Biz</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque id ligula
-                    porta felis euismod semper.
+                    SafeTrac Business enables employees, students, and parents to perform self health-check using CDC 
+                    recommendations and also monitor the exposure level by using proprietary distance tracing 
+                    technology based on Bluetooth Low Energy Wristbands.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #d16b86">
+                  <a href="https://play.google.com/store/apps/details?id=com.toabaja.safetrac.biz" class="btn-text" style="color: #d16b86">
                     <span class="span">See Project</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
